# nectarchain

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  Singularity  environment-dirac.yml  environment.yml  example  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  something-else.md
.github/workflows/: ci.yml  deploy-ghcr.yml  deploy-pypi.yml  deploy.yml
LowLevel_analysis_pipeline/: ChargeIntegration.py  MeanCameraDisplay.py  MeanWaveForms.py  Processor.py  README  StartCalib.py  StartCalib_ashkar.py  TriggerStatistics.py
docs/: Makefile  api.rst  conf.py  index.rst  reference.rst
docs/_static/: switcher.json
docs/_templates/: custom-module-template.rst
docs/api-reference/: index.rst
docs/api-reference/data/: index.rst
docs/api-reference/display/: index.rst
docs/api-reference/dqm/: index.rst
docs/api-reference/makers/: index.rst
docs/api-reference/tools/: index.rst
docs/api-reference/utils/: index.rst
docs/developer-guide/: getting-started.rst  index.rst
docs/user-guide/: dqm.rst  env-vars.rst  getting-started.rst  howto-dirac.rst  howto-pedestal.rst  index.rst  troubleshooting.rst
dqm/: README  charge_integration.py  dqm_summary_processor.py  mean_camera_display.py  mean_waveforms.py
examples/: waveform_animation_highGain.py
licenses/: LICENSE.rst
nectarchain/calibration/: NectarGAIN.py  NectarGainExample.ipynb
nectarchain/calibration/NectarGain/: NectarGainSPE_combined.py  NectarGainSPE_singlerun.py  __init__.py  parameters.py  parameters_signal.yaml  parameters_signalStd.yaml  utils.py
nectarchain/calibration/NectarGain/PhotoStat/: PhotoStat.py
nectarchain/calibration/NectarGain/SPEfit/: NectarGainSPE.py  NectarGainSPE_combined.py  NectarGainSPE_singlerun.py  __init__.py  parameters.py  parameters_signalStd.yaml  parameters_signal_combined.yaml  utils.py
nectarchain/calibration/NectarGain/utils/: error.py
nectarchain/calibration/container/: __init__.py  charge.py  charge_extractor.py  utils.py  waveforms.py
nectarchain/dqm/: README  ReadPickleFiles.py  camera_monitoring.py  charge_integration.py  dqm_summary_processor.py  mean_camera_display.py  mean_waveforms.py  start_calib.py  trigger_statistics.py
nectarchain/tools/: write_camera_calibration.py  write_pedestals_param.json
nectarchain/user_scripts/fbrun/: ComputeCalibCoefs.py
nectarchain/user_scripts/ggrolleron/: gain_HHV_computation.py  gain_HHV_computation.sh  gain_PhotoStat_computation.py  gain_PhotoStat_computation.sh  gain_SPEfit_combined_computation.py  gain_SPEfit_combined_computation.sh  gain_SPEfit_computation.py  gain_nominal_computation.py  gain_nominal_computation.sh  load_wfs_compute_charge.py  test.py
nectarchain/user_scripts/jlenain/: Dark room temperature analysis.md
nectarchain/user_scripts/jlenain/dqm_job_submitter/: dqm_processor.sh  submit_dqm_processor.py
notebooks/: Access NectarCAM data using DIRAC API.ipynb  Access NectarCAM data using DIRAC API.py  ExampleDBHandler.py  Read_NectarCAM_events.ipynb  Read_NectarCAM_events.py  analysis_photostat_simple.py  calculate_calibration_coefficients.ipynb  calculate_calibration_coefficients.py  calculate_pedestals.ipynb  calculate_pedestals.py
notebooks/tool_implementation/: tuto_SPE.ipynb  tuto_SPE.py  tuto_photostat.py  tuto_tools.ipynb  tuto_tools.py  tuto_waveforms_charges_extraction.ipynb  tuto_waveforms_charges_extraction.py
singularity/: Singularity  nectarchain.def
src/nectarchain/: README.md  version.py
src/nectarchain/NectaRTA_dqm/bokeh_app/: README.md  main.py  requirements.txt
src/nectarchain/RTA_dqm/: README.md  main.py
src/nectarchain/RTA_dqm/bokeh_app/: README.md
src/nectarchain/RTA_dqm/utils/: high_level_builders.py
src/nectarchain/_dev_version/: __init__.py
src/nectarchain/acceptance_verification_package/: deadtime.py  gui.py  hillas_validation.py  ped_vs_time.py
src/nectarchain/acceptance_verification_package/resources/: source_type_labels.json
src/nectarchain/calibration/: NectarGAIN.py  README.md  __init__.py
src/nectarchain/container/: utils.py
src/nectarchain/data/: __init__.py  management.py
src/nectarchain/data/container/: core.py  (+14 more)
src/nectarchain/display/: __init__.py  display.py
src/nectarchain/dqm/: README  README.md  ReadFitsFile.py  ReadPickleFiles.py  __init__.py  bokeh_app.py  camera_monitoring.py  charge_integration.py  db_utils.py  dqm_summary_processor.py  mean_camera_display.py  mean_waveforms.py  ping_pong.py  pixel_participation.py  pixel_timeline.py  start_calib.py  start_calib_thermal_test.py  start_dqm.py  trigger_statistics.py  waveforms.py
src/nectarchain/makers/: __init__.py  chargesMakers.py  charges_makers.py  core.py  waveformsMakers.py  waveforms_makers.py
src/nectarchain/tests/: test_stats.py  test_version.py
src/nectarchain/tools/: __init__.py  create_catA_calibration_file.py  write_camera_calibration.py  write_camera_calibration_param.json  write_pedestals.py
src/nectarchain/trr_test_suite/: ChargeResolution.py  LaserSourceIntensity.py  NSB_rate_calib.py  README.md  __init__.py  charge_resolution.py  deadtime.py  flatfield_source_characterization.py  gui.py  laser_source_intensity.py  linearity.py  nectarcam_full_calibration_analysis.py  nectarcam_full_calibration_analysis.py.py  nsb_rate_calibration.py  observation_temperature.py  observation_temperatures.py  pedestal.py  pix_couple_tim_uncertainty.py  pix_tim_uncertainty.py  run_list.json  test_thermal_code.py  test_thermal_code_Tool.py  tools_components.py  trigger_timing.py  utils.py
src/nectarchain/trr_verification_package/: charge_resolution.py  deadtime.py  gui.py  linearity.py  nsb_rate_calibration.py  pedestal.py  pix_couple_tim_uncertainty.py  pix_tim_uncertainty.py  tools_components.py  trigger_timing.py  utils.py
src/nectarchain/utils/: __init__.py  constants.py  datautils.py  dbhandler.py  error.py  io.py  logger.py  metadata.py  plot_style.mpltstyle  plot_style_new.mpltstyle  stats.py  utils.py
(+382 files in other folders)
