[build-system]
requires = ["setuptools >= 65", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nectarchain"
description = "Analysis chain for the CTA MSTN NectarCAM prototype"
authors = [{name = "NectarCAM collaboration"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]
requires-python = "~=3.8"
dependencies = [
    "astropy~=4.2",
    "ctapipe~=0.12",
    "ctapipe-io-nectarcam~=0.1.2",
    "numpy~=1.22",
    "protozfits~=2.0",
    "tables>=3.7",
    "zodb",
    "zeo",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
"Bug Tracker" = "https://github.com/cta-observatory/nectarchain/issues"
"Source Code" = "https://github.com/cta-observatory/nectarchain"

[project.optional-dependencies]
tests = ["pytest"]
dev = ["setuptools_scm"]
all = [
    "pytest",
    "setuptools_scm",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["nectarchain._dev_version"]

[tool.setuptools_scm]
write_to = "src/nectarchain/_version.py"
