[metadata]
name = nectarchain
description = Analysis chain for the CTA MSTN NectarCAM prototype
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = NectarCAM collaboration
license = BSD-3-Clause

project_urls =
    Bug Tracker = https://github.com/cta-observatory/nectarchain/issues
    Source Code = https://github.com/cta-observatory/nectarchain

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    = src
python_requires = ~=3.8
zip_safe = False
install_requires =
    astropy~=4.2
    browser_cookie3~=0.16.5
    ctapipe~=0.12
    ctapipe_io_nectarcam
    mechanize
    numba
    numpy==1.22
    protozfits~=2.0
    tables>=3.7

[options.packages.find]
where = src
exclude =
    nectarchain._dev_version

[options.extras_require]
tests =
    pytest
dev =
    setuptools_scm[toml]
all =
    %(tests)s
    %(dev)s

[tool:pytest]
minversion = 3.0
addopts = -v

[aliases]
test = pytest

[flake8]
max-line-length = 88
